# halsu-plugins-for-streaming

./: .gitignore  Install_Halsu_HybridKeyer.ps1  README.md
Halsu_HybridKeyer/data/obs-plugins/Halsu_HybridKeyer/: Halsu_HybridKeyer.effect
Halsu_HybridKeyer_V025/: CMakeLists.txt  plugin_main.cpp
Halsu_HybridKeyer_V025/data/: Halsu_HybridKeyer_V025.effect
